RESOLVED FIXED157127
REGRESSION(r199659): Web Process crash when RenderTheme::adjustMenuListStyle is called with a null element
https://bugs.webkit.org/show_bug.cgi?id=157127
Summary REGRESSION(r199659): Web Process crash when RenderTheme::adjustMenuListStyle ...
Carlos Garcia Campos
Reported 2016-04-28 02:47:35 PDT
This happens for example with tests fast/css/appearance-with-pseudo-elements-in-quirks-mode.html and fast/css/appearance-with-pseudo-elements.html. We should just just element is not nullptr.
Attachments
Patch (1.57 KB, patch)
2016-04-28 02:49 PDT, Carlos Garcia Campos
svillar: review+
Carlos Garcia Campos
Comment 1 2016-04-28 02:49:39 PDT
Carlos Garcia Campos
Comment 2 2016-04-28 03:07:03 PDT
Note You need to log in before you can comment on or make changes to this bug.