REGRESSION(r199659): Web Process crash when RenderTheme::adjustMenuListStyle is called with a null element https://bugs.webkit.org/show_bug.cgi?id=157127

Reviewed by Sergio Villar Senin.

This happens for example with tests fast/css/appearance-with-pseudo-elements-in-quirks-mode.html and
fast/css/appearance-with-pseudo-elements.html.

* rendering/RenderThemeGtk.cpp:
(WebCore::RenderThemeGtk::adjustMenuListStyle): Do not change the style color if the given element is nullptr.

Canonical link: https://commits.webkit.org/175231@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200184 268f45cc-cd09-0410-ab3c-d52691b4dbfc